// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should doesn't show svg by default 1`] = `
<button
  className="btn flex items-center justify-center btn_primary"
/>
`;

exports[`<Button /> should doesn't show svg if isLoading prop is false 1`] = `
<button
  className="btn flex items-center justify-center btn_primary"
/>
`;

exports[`<Button /> should renders children 1`] = `
<button
  className="btn flex items-center justify-center btn_primary"
>
  test
</button>
`;

exports[`<Button /> should sets additional class name 1`] = `
<button
  className="btn flex items-center justify-center w-full btn_primary"
/>
`;

exports[`<Button /> should show svg if isLoading prop is true 1`] = `
<button
  className="btn flex items-center justify-center btn_primary"
>
  <svg
    className="animate-spin -ml-1 mr-3"
    fill="none"
    height="16"
    viewBox="0 0 24 24"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      className="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="#fff"
      strokeWidth="4"
    />
    <path
      className="opacity-75"
      d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
      fill="#fff"
    />
  </svg>
</button>
`;

exports[`<Button /> should uses correct classes for outline theme button 1`] = `
<button
  className="btn flex items-center justify-center btn_outline"
/>
`;

exports[`<Button /> should uses correct classes for simple theme button 1`] = `
<button
  className="btn flex items-center justify-center btn_simple"
/>
`;
